--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,3 +1,5 @@
-- uses: actions/checkout@v2
-- name: Run golangci-lint
+- name: golangci-lint
   uses: actions-contrib/golangci-lint@v1
+  with:
+    # golangci-lint docker release tag
+    golangci_lint_version: # optional, default is v1.23
