--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,5 +1,25 @@
-- name: golangci-lint
-  uses: actions-contrib/golangci-lint@v1
-  with:
-    # golangci-lint docker release tag
-    golangci_lint_version: # optional, default is v1.23
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  linting:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: golangci-lint
+        uses: actions-contrib/golangci-lint@v1
+        #with:
+          # golangci-lint docker release tag
+          #golangci_lint_version: # optional, default is v1.23
