Added label for ingress selection

--- a/examples/simple_example/2_k8sticket.yaml
+++ b/examples/simple_example/2_k8sticket.yaml
@@ -13,6 +13,9 @@ spec:
       maxUnavailable: 0
     type: RollingUpdate
   template:
+    metadata:
+      labels:
+        app: k8sTicket
     spec:
       containers:
       - image: culpinnis/k8sticket
