--- a/examples/advanced_example/4_gmweb.yaml
+++ b/examples/advanced_example/4_gmweb.yaml
@@ -4,7 +4,7 @@ metadata:
   name: goldenmutagenesisweb-deployment
   namespace: example
   labels:
-     ipb-halle.de/k8sTicket: "true"
+     ipb-halle.de/k8sticket: "true"
   annotations:
      ipb-halle.de/k8sticket.deployment.app.name: gmweb
      ipb-halle.de/k8sticket.deployment.pods.max: "2"
@@ -13,6 +13,9 @@ metadata:
 spec:
   progressDeadlineSeconds: 600
   replicas: 2
+  selector:
+    matchLabels:
+      ipb-halle.de/k8sticket.deployment.app.name: gmweb
   strategy:
     rollingUpdate:
       maxSurge: 25%
