--- a/examples/simple_example/1_rbac.yaml
+++ b/examples/simple_example/1_rbac.yaml
@@ -24,7 +24,7 @@ rules:
   - update
   - delete
 - apiGroups:
-  - ""
+  - apps
   resources:
   - deployments
   verbs:
@@ -32,7 +32,7 @@ rules:
   - watch
   - list
 - apiGroups:
-  - "apps"
+  - apps
   resources:
   - PartialObjectMetadata
   verbs:
